--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@ background-attachment: fixed;">
     height="500"
     src="https://player.codemao.cn/new/preview?bcmc_url=https://creation.codemao.cn/445/kitten/d2ViXzIwMDJfNDYyMTg2MV8xNzQ5MTI1NzNfMTY3NDE5OTY3NDMxM18xN2ZkZTkyOQ==.json">
 </iframe>
-
+  <a href="https://github.com/zhangyunxuzyx/newyear.github.io">Github 开放源代码</a>
 </body>
 </html>
