--- a/index.html
+++ b/index.html
@@ -3,17 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>共帖春联，共聚跨年  -  张允旭</title>
+  <title>网站无啦！</title>
 </head>
-<body background="img/beijing.jpg" style=" background-repeat:no-repeat ;background-size:100% 100%;
-background-attachment: fixed;">
-  <br><br><br><br><br><br>
-  <iframe align="center"
-    title="Inline Frame Example"
-    width="300"
-    height="500"
-    src="https://player.codemao.cn/new/preview?bcmc_url=https://creation.codemao.cn/445/kitten/d2ViXzIwMDJfNDYyMTg2MV8xNzQ5MTI1NzNfMTY3NDE5OTY3NDMxM18xN2ZkZTkyOQ==.json">
-</iframe>
-  <a href="https://github.com/zhangyunxuzyx/newyear.github.io">Github 开放源代码</a>
+<body>
+  <imgs  align="center">
+    <img scr="img/OIP-C.jpg">
+  </imgs>
+  <h1 align="center">404</h1>
+  <h1 align="center">网站 共帖春联，共聚跨年 已被ZhangYunxu永久删除</h1>
+  <p  align="right">Github 管理部门</p>
 </body>
 </html>
