--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <imgs  align="center">
-    <img scr="img/OIP-C.jpg">
+    <img scr="OIP-C.jpg">
   </imgs>
   <h1 align="center">404</h1>
   <h1 align="center">网站 共帖春联，共聚跨年 已被ZhangYunxu永久删除</h1>
